--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,7 +8,7 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
+GlobalDefaultGameMode=/Game/ArcadeClassic/Blueprints/Framework/BP_Gamemode_Gameplay.BP_Gamemode_Gameplay_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
@@ -23,5 +23,4 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
-
 
